fix: fixes for java 8